--- a/Frontend/nba_games/static/css/style.css
+++ b/Frontend/nba_games/static/css/style.css
@@ -10,8 +10,10 @@ body {
   margin: 0;
   background: #508a94;
 
-  /* background-image: url("maxresdefault.jpg");
-  background-size: 100%;  */
+  /* background-image: url("../Images/basketball-court-bg.jpg"); */
+  background-image: url("../Images/Gymfloor1.jpg");
+  background-size: 100%; 
+  /* background-attachment: fixed; */
   /* background: linear-gradient(114deg, rgba(240,202,0,1) 0%, rgba(19,121,9,1) 39%, rgba(3,121,219,1) 60%, rgba(150,255,0,1) 100%); */
 }
 
@@ -50,16 +52,15 @@ h5 {
 .jumbotron {
   font-family: "Ren & Stimpy";
   text-shadow: 4px 2px 4px #000000;
-  
+  width: 85%;
   font-size: 35px;
   color: rgb(255, 217, 0);
   font-weight: bold;
   /* box-shadow: 5px 10px 40px  #5adfd6;
   padding: 10px; */
-  background:rgba(8, 77, 77, 0);
+  background:rgba(100, 82, 2, 0.432);
   /* background-image: url("maxresdefault.jpg");
   background-size: 100%;  */
-
 }
 div {
   background: rgba(68, 56, 1, 0);
@@ -102,7 +103,7 @@ div {
   /* border: 4px; */
 }
 .panel {
-  width: 100%;
+  width: 85%;
   padding: 10px;
   font-size: 20px;
   text-shadow: 2px 0px 2px black ;
@@ -120,7 +121,7 @@ div {
 }
 
 .well {
-  width: 100%;
+  width: 85%;
   padding: 5px;
   color: black;
   background: rgba(102, 82, 2, 0.432);
