--- a/Frontend/nba_games/templates/index.html
+++ b/Frontend/nba_games/templates/index.html
@@ -15,6 +15,12 @@
               Smokum|Snowburst+One|Special+Elite" rel="stylesheet">
   <link href="//db.onlinewebfonts.com/c/3b6a3b46f2fbe16704b7d85493e7c38e?family=Ren+&+Stimpy" rel="stylesheet"
     type="text/css" />
+  
+    <style id="bgStyle">
+      /* body {
+        background-image: url('../static/Images/Courts/ATL.jpg'), url('../static/Images/Gymfloor1.jpg');
+      } */
+      </style>
 </head>
 
 <body>
@@ -22,7 +28,7 @@
   <div class="container">
     <div class="row">
       <center>
-        <div class="jumbotron">
+        <div class="well">
           <img src="../static/Images/nba-logo-transparent-300x300.png" style="width:20%; float:right;"
             class="img-rounded" alt="NBA logo">
 
