--- a/Frontend/nba_games/static/css/style.css
+++ b/Frontend/nba_games/static/css/style.css
@@ -13,7 +13,7 @@ body {
   background-size: 35%, 100%; 
   /* background-origin: content-box; */
   background-position: center 89%, right top;
-  background-repeat: no-repeat, no-repeat;
+  background-repeat: no-repeat, repeat;
   /* background-attachment: fixed; */
   /* background: linear-gradient(114deg, rgba(240,202,0,1) 0%, rgba(19,121,9,1) 39%, rgba(3,121,219,1) 60%, rgba(150,255,0,1) 100%); */
 }
@@ -145,6 +145,50 @@ div {
   border-style: solid;
 }
 
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
 /* .tooltip {
   display: none;
   position: absolute;
