--- a/Frontend/nba_games/templates/index.html
+++ b/Frontend/nba_games/templates/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="shortcut icon" href="../static/Images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../static/Images/favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -73,6 +75,7 @@
 
       </div>
       <div class="col-sm-2">
+        <div class="container">
         <center>
           <!-- <form>
           <div id="moneyLine" class="panel-body">
@@ -80,10 +83,15 @@
             PREDICTION-LOADING</div>
           </form> -->
           <!-- Use a button to open the snackbar -->
-          <button onclick="predictHandler()">PREDICT WINNER</button>
+          <!-- <svg width="100" height="100">
+            <circle cx="50" cy="50" r="40" stroke="rgb(117, 74, 17)" stroke-width="4" fill="rgb(255, 81, 0)" />
+          </svg> -->
+          <!-- <img src="../static/Images/basketball-512.png" alt="bBall"  style="width:100%"> -->
+          <button class="btn" onclick="predictHandler()">PREDICT<br>WINNER</button>
           <!-- The actual snackbar -->
           <div id="snackbar">STAND BY...</div>
         </center>
+      </div>
       </div>
       <div class="col-sm-5">
         <center>
