--- a/Frontend/nba_games/static/css/style.css
+++ b/Frontend/nba_games/static/css/style.css
@@ -20,7 +20,7 @@ body {
 
 h1 { 
   font-family: "Impact";
-  font-size: 45px;
+  font-size: 50px;
   font-weight: bold;
   color: rgb(255, 255, 255);
   /* color: rgb(255, 217, 0); */
@@ -29,7 +29,7 @@ h1 {
 
 }
 h2 {
-  font-size: 30px;
+  font-size: 25px;
   color: rgb(255, 217, 0);
   /* text-shadow: 2px 2px rgb(0, 45, 87); */
   text-shadow: 3px 3px 2px black;  
@@ -37,8 +37,9 @@ h2 {
 }
 h3 {
   font-family: "Impact";
-  font-size: 25px;
+  font-size: 20px;
   color: rgb(255, 217, 0);
+  text-align: right;
   text-shadow: 3px 3px 2px black;  
 }
 h4 {
@@ -193,7 +194,7 @@ div {
 }
 .container .btn {
   position: absolute;
-  top: 300%;
+  top: 120%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -207,6 +208,8 @@ div {
   text-align: center;
   box-shadow: 0 8px 16px 0 rgba(43, 15, 0, 0.4), 0 6px 10px 0 rgba(43, 15, 0, 0.4);
   transition-duration: 0.4s;
+  text-shadow: 0px 4px 9px rgba(92, 57, 0, 0.972);
+
 }
 
 .container .btn:hover {
