bug fix, away team

--- a/Frontend/nba_games/static/css/style.css
+++ b/Frontend/nba_games/static/css/style.css
@@ -202,8 +202,9 @@ div {
   color: rgb(255, 255, 255);
   font-size: 20px;
   padding: 19px 14px;
-  border: dashed rgb(246, 168, 0);
+  border: 5px dashed rgb(246, 168, 0);
   cursor: pointer;
+  stroke-dashoffset: 6px;
   border-radius: 50%;
   text-align: center;
   box-shadow: 0 8px 16px 0 rgba(43, 15, 0, 0.4), 0 6px 10px 0 rgba(43, 15, 0, 0.4);
