--- a/Frontend/nba_games/templates/index.html
+++ b/Frontend/nba_games/templates/index.html
@@ -99,11 +99,10 @@
           <!-- <svg width="100" height="100">
             <circle cx="50" cy="50" r="40" stroke="rgb(117, 74, 17)" stroke-width="4" fill="rgb(255, 81, 0)" />
           </svg> -->
-          <!-- <img src="../static/Images/basketball-512.png" alt="bBall"  style="width:100%"> -->
           <div class="container">
-              
               <button class="btn" onclick="predictHandler()">PREDICT<br>WINNER</button>
               <!-- <span class="spinner-grow text-warning"></span><br> -->
+              <!-- <br><img src="../static/Images/basketball-512.png" alt="bBall"  style="width:60%"> -->
           </div>
           <!-- The actual snackbar -->
           <div id="snackbar">STAND BY...</div>
