--- a/Frontend/nba_games/templates/index.html
+++ b/Frontend/nba_games/templates/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="col-sm-2">
         <div class="container">
-        <center>
+        <!-- <center> -->
           <!-- <form>
           <div id="moneyLine" class="panel-body">
             <button id="submit" type="submit" class="btn btn-default">Predict Winner</button>
@@ -107,7 +107,7 @@
           <!-- The actual snackbar -->
           <div id="snackbar">STAND BY...</div>
 
-        </center>
+        <!-- </center> -->
       </div>
       </div>
       <div class="col-sm-5">
