at the buzzer audio added and winner snackbar grfx

--- a/Frontend/nba_games/templates/index.html
+++ b/Frontend/nba_games/templates/index.html
@@ -105,7 +105,9 @@
               <!-- <br><img src="../static/Images/basketball-512.png" alt="bBall"  style="width:60%"> -->
           </div>
           <!-- The actual snackbar -->
-          <div id="snackbar">STAND BY...</div>
+          <div id="snackbar">STAND BY...
+            <img src="" id="notify_photo">
+          </div>
 
         <!-- </center> -->
       </div>
