--- a/Deploy/nba_games/nba_games/static/css/style.css
+++ b/Deploy/nba_games/nba_games/static/css/style.css
@@ -1,5 +1,5 @@
-@import url(//db.onlinewebfonts.com/c/3b6a3b46f2fbe16704b7d85493e7c38e?family=Ren+&+Stimpy);
-@font-face {font-family: "Ren & Stimpy"; src: url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.eot"); src: url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.woff") format("woff"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.svg#Ren & Stimpy") format("svg"); }
+/* @import url(//db.onlinewebfonts.com/c/3b6a3b46f2fbe16704b7d85493e7c38e?family=Ren+&+Stimpy); */
+/* @font-face {font-family: "Ren & Stimpy"; src: url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.eot"); src: url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.woff") format("woff"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3b6a3b46f2fbe16704b7d85493e7c38e.svg#Ren & Stimpy") format("svg"); } */
 html,
 body {
   font-family: "Impact";
@@ -10,9 +10,9 @@ body {
   background: #000000;
   /* background-image: url("../Images/basketball-court-bg.jpg"); */
   background-image: url("../Images/Gymfloor_sm.jpg");
-  background-size: 35%, 100%; 
+  background-size: 40%, 100%; 
   /* background-origin: content-box; */
-  background-position: center 89%, right top;
+  background-position: center 70%, right top;
   background-repeat: no-repeat, repeat;
   /* background-attachment: fixed; */
   /* background: linear-gradient(114deg, rgba(240,202,0,1) 0%, rgba(19,121,9,1) 39%, rgba(3,121,219,1) 60%, rgba(150,255,0,1) 100%); */
@@ -61,15 +61,15 @@ h5 {
 .jumbotron {
   font-family: "Impact";
   text-shadow: 4px 2px 4px #000000;
-  width: 90%;
+  width: 100%;
   font-size: 35px;
-  color: rgb(255, 217, 0);
+  color: rgb(255, 255, 255);
   font-weight: bold;
-  /* box-shadow: 5px 10px 40px  #5adfd6;
-  padding: 10px; */
+  padding: 3px;
   background:rgba(100, 82, 2, 0.432);
-  /* background-image: url("maxresdefault.jpg");
-  background-size: 100%;  */
+  border: 3px;
+  border-style: solid;
+
 }
 div {
   background: rgba(68, 56, 1, 0);
@@ -79,6 +79,8 @@ div {
   /* background: rgb(240,202,0);
   background: linear-gradient(114deg, rgba(240,202,0,1) 0%, rgba(19,121,9,1) 39%, rgba(3,121,219,1) 60%, rgba(150,255,0,1) 100%); */
 }
+
+
 .container {
   width: 100%;
   padding: 10px;
@@ -114,7 +116,7 @@ div {
 }
 .panel {
   width: 90%;
-  padding: 10px;
+  padding: 5px;
   font-size: 20px;
   text-shadow: 2px 0px 2px black ;
   color: rgb(255, 217, 0);
@@ -134,10 +136,10 @@ div {
 
 .well {
   width: 90%;
-  padding: 15px;
+  padding: 9px;
   color: rgb(255, 255, 255);
   background: rgba(102, 82, 2, 0.432);
-  overflow: auto;
+  overflow: visible;
   font-size: 25px;
   text-shadow: 3px 3px 2px black;  
   /* background: linear-gradient(45deg, rgba(6,0,112,1) 49%, rgba(255,0,0,1) 51%); */
@@ -214,17 +216,100 @@ div {
   box-shadow: 0 8px 16px 0 rgba(43, 15, 0, 0.4), 0 20px 20px 0 rgba(43, 15, 0, 0.6);
   
 }
+div.col-sm-5 {
+  max-width: 40%;
 
-@media only screen and (max-width: 800px) {
+}
+div.col-sm-6 {
+  max-width: 100%;
+  /* top: 120%; */
+}
+
+@media only screen and (max-width: 770px) {
+  #selDatasetAway, #selDatasetHome {
+    font-size: 18px;
+  }
+  body {
+    background-size: 60%, 100%; 
+  }
+  
+  h1 {
+    font-size: 25px;
+  }
+  h2, h3 {
+    font-size: 9px;
+  }
+  h5 {
+    font-size: 12px;
+    margin: 2px;
+  }
+  li {
+    font-size: 8px;
+    min-width: 80px;
+  }
   div.col-sm-5 {
-    max-width: 77%;
-    /* top: 120%; */
+    max-width: 40%;
 
   }
+  
+  #rCol {
+    max-width: 40%;
+    /* max-width: 100px; */
+    /* top: 120%; */
+    position: relative;
+    /* top: -130px; */
+    right: -20px;
+  }
+  div.col-sm-2 {
+    max-width: 20%;
+    /* max-width: 80px; */
+    /* top: 120%; */
+  }
+  div.col-sm-6 {
+    max-width: 50%;
+    /* top: 120%; */
+  }
+  
+  /* div.row {
+    min-width: 100%;
+  } */
   div.container {
-    top: 60px;
-    min-height: 110px;
+    width: 100%;
+    /* top: 60px; */
+    min-height: 130px;
 
+  }
+  div.container.well {
+    width: 100%;
+    /* top: 60px; */
+    min-height: 130px;
+
+  }
+  .jumbotron {
+    width: 100%;
+    font-size: 20px;
+    padding: 3px;
+  }
+  .panel-body {
+    padding: 3px;
+    max-width: 100px;
+
+  }
+  .panel-primary {
+    padding: 1px;
+    min-height: 360px;
+
+  }
+  .container .btn {
+    /* position: absolute;
+    top: 60px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); */
+    background-color: rgba(207, 124, 0, 0.5);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    padding: 21px 17px;
   }
 }
 
