--- a/Deploy/nba_games/nba_games/templates/index.html
+++ b/Deploy/nba_games/nba_games/templates/index.html
@@ -65,14 +65,14 @@
     <center>
       <div class="jumbotron">
         <center>
-        <img src="../static/Images/basketball-player-slamA.jpg" style="width:20%; float:right;clear:right;"
+        <img src="../static/Images/basketball-player-slamA.jpg" style="width:20%; float:left;clear:right;" 
           class="img-rounded" alt="NBA logo">
 
 
-        <h1>NBA* Game Predictor</h1>
-        <h2>Use 15 years of NBA game data, Machine Learning and a Random Forest Classifier to predict a Winner</h2>
+        <h1 align="left" >NBA* Game Predictor</h1>
+        <h2 align="left">Use 15 years of NBA game data, Machine Learning and a Random Forest Classifier to predict a Winner</h2>
       
-      <h2>* no affiliation with the NBA * <br>
+      <h4>* no affiliation with the NBA * <br>
 
         <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Nice! I&#39;ve been looking for one of these." 
         data-url="https://nba-game-predictor.herokuapp.com/" data-via="tacticalArtist" data-hashtags="sportsbet" data-related="tacticalArtist" data-show-count="false">Tweet</a>
@@ -81,7 +81,18 @@
         <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fnba-game-predictor.herokuapp.com%2F&width=140&layout=button_count&action=like&size=small&share=true&height=46&appId=555724901680672" 
         width="140" height="20" style="border:none;overflow:hidden" 
         scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </h2>
+      
+
+        <!-- Sharingbutton Reddit -->
+<a class="resp-sharing-button__link" href="https://reddit.com/submit/?url=https://nba-game-predictor.herokuapp.com/" target="_blank" rel="noopener" aria-label="Reddit">
+  <div class="resp-sharing-button resp-sharing-button--reddit resp-sharing-button--medium"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 11.5c0-1.65-1.35-3-3-3-.96 0-1.86.48-2.42 1.24-1.64-1-3.75-1.64-6.07-1.72.08-1.1.4-3.05 1.52-3.7.72-.4 1.73-.24 3 .5C17.2 6.3 18.46 7.5 20 7.5c1.65 0 3-1.35 
+      3-3s-1.35-3-3-3c-1.38 0-2.54.94-2.88 2.22-1.43-.72-2.64-.8-3.6-.25-1.64.94-1.95 3.47-2 4.55-2.33.08-4.45.7-6.1 1.72C4.86 8.98 3.96 8.5 3 8.5c-1.65 0-3 1.35-3 3 0 1.32.84 2.44 2.05 2.84-.03.22-.05.44-.05.66 0 3.86 4.5 7 10 7s10-3.14 10-7c0-.22-.02-.44-.05-.66 1.2-.4 2.05-1.54 
+      2.05-2.84zM2.3 13.37C1.5 13.07 1 12.35 1 11.5c0-1.1.9-2 2-2 .64 0 1.22.32 1.6.82-1.1.85-1.92 1.9-2.3 3.05zm3.7.13c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm9.8 4.8c-1.08.63-2.42.96-3.8.96-1.4 0-2.74-.34-3.8-.95-.24-.13-.32-.44-.2-.68.15-.24.46-.32.7-.18 1.83 1.06 4.76 1.06 6.6 
+      0 .23-.13.53-.05.67.2.14.23.06.54-.18.67zm.2-2.8c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm5.7-2.13c-.38-1.16-1.2-2.2-2.3-3.05.38-.5.97-.82 1.6-.82 1.1 0 2 .9 2 2 0 .84-.53 1.57-1.3 1.87z"/></svg>
+  </div>Reddit</div>
+</a></h4>
+
     </center>
 
       </div>
@@ -116,7 +127,7 @@
         <h3 class="panel-title">Sample MetaData</h3>
       </div> -->
       <div class="row">
-      <div class="col-sm-5" style=" width:100%; float:left;clear:right">   <!-- style=" width:100%; float:left;clear:right"  -->
+      <div class="col-sm-5" style=" width:100%; float:left;">   <!-- style=" width:100%; float:left;clear:right"  -->
         <!-- <center> -->
           <div id="teamLogo_Home" class="panel-body">LOGO-LOADING</div>
         <!-- </center> -->
